# skap

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
npm/: LICENSE  README.md  install.js  package.json
src/: cli.rs  main.rs
src/commands/: add.rs  archive.rs  clean.rs  clone.rs  common.rs  config.rs  delete.rs  doctor.rs  fix.rs  list.rs  logs.rs  mod.rs  move_cmd.rs  new.rs  open.rs  ports.rs  rename.rs  restart.rs  run.rs  shell.rs  start.rs  status.rs  stop.rs  tag.rs  update.rs
src/config/: global.rs  mod.rs  ports.rs  registry.rs
src/core/: detect.rs  docker.rs  git.rs  github.rs  gitlab.rs  mod.rs  ports.rs  project_file.rs  templates.rs  templates_data.rs
src/utils/: fs.rs  mod.rs  output.rs  process.rs
templates/_common/: README.md.tera
templates/axum/: .dockerignore.tera  .env.example.tera  .gitignore.tera  Cargo.toml.tera  Dockerfile.tera  README.md.tera  template.toml
templates/django/: .dockerignore.tera  .env.example.tera  .gitignore.tera  Dockerfile.tera  README.md.tera  docker-compose.yml.tera  manage.py.tera  requirements.txt.tera  template.toml
templates/docker-only/: .dockerignore.tera  .env.example.tera  .gitignore.tera  Dockerfile.tera  README.md.tera  docker-compose.yml.tera  template.toml
templates/express/: .dockerignore.tera  .env.example.tera  .gitignore.tera  Dockerfile.tera  README.md.tera  docker-compose.yml.tera  package.json.tera  template.toml
templates/fastapi/: .dockerignore.tera  .env.example.tera  .gitignore.tera  Dockerfile.tera  README.md.tera  template.toml  (+2 more)
(+70 files in other folders)
