[package]
name = "skap"
version = "0.1.0"
edition = "2021"
authors = ["skap contributors"]
description = "A lean, fast Linux CLI for managing dev projects"
license = "MIT"
repository = "https://github.com/skap-cli/skap"
homepage = "https://github.com/skap-cli/skap"
readme = "README.md"
keywords = ["cli", "dev", "scaffold", "docker", "project"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "skap"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }
bollard = "0.17"
tera = "1"
anyhow = "1"
thiserror = "1"
colored = "2"
indicatif = "0.17"
dialoguer = "0.11"
which = "6"
sysinfo = "0.30"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
